refactor: remove unused JarURI imports and simplify resource path handling
- Remove unused JarURI imports from AaptManifestReader and AaptScanner
- Simplify resource path handling by removing redundant JarURI.toString() calls
- Rename changeURLpath() to filterDrawableIcon() for clarity
- Clean up unnecessary JarURI instantiations in widget icon processing
- Add missing braces for code consistency in AaptManifestReader